--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 GITLAB_IMAGE=null
 LOCALSTACK_IMAGE=localstack/localstack:0.12.20
 MAVEN_IMAGE=maven:3-jdk-11
+MVN_M2=~/.m2
 MVN_OPTS=-DLOG_LEVEL=INFO
 MVN_SETTINGS_FILE=~/.m2/settings.xml
