--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,4 +88,4 @@ create-develop-nightly-schedule:
 trivy-container:
   extends: .trivy-container-base
   variables:
-    HIGH_SUPPRESSIONS: "CVE-2023-0464,CVE-2023-2650"
+    HIGH_SUPPRESSIONS: "CVE-2023-0464,CVE-2023-21930,CVE-2023-4911"
