--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.13</version>
+    <version>2.7.16</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <groupId>uk.gov.dwp.health.pip</groupId>
   <artifactId>ms-claim-manager</artifactId>
-  <version>1.6.1</version>
+  <version>1.7.0</version>
   <name>ms-pip-claim-manager</name>
   <description>Pip micro service support save and resume a claim and save session data</description>
 
@@ -55,6 +55,7 @@
     <restassured.extent.report.plugin.version>1.4.0</restassured.extent.report.plugin.version>
     <allure.version>2.17.3</allure.version>
     <extentreport-allure-annotation.version>1.0.2</extentreport-allure-annotation.version>
+    <tomcat.version>9.0.82</tomcat.version>
   </properties>
   <dependencies>
     <dependency>
